objects/hed__Course_Offering_Schedule__c.object
<CustomObject>
    <description>Joins Course Offering to Time Block and provides a way to specify the days and location for a Course.</description>
    <fields>
        <fullName>hed__Course_Offering__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Course Offering to which this record belongs.</description>
        <inlineHelpText>The Course Offering to which this record belongs.</inlineHelpText>
        <label>Course Offering</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Course Offering Schedules</relationshipLabel>
        <relationshipName>Course_Offering_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__End_Time__c</fullName>
        <description>The time of day the Course Offering ends.</description>
        <inlineHelpText>The time of day the Course Offering ends.</inlineHelpText>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Facility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Facility associated with the Course Offering for the specified time and day of week.</description>
        <inlineHelpText>The Facility associated with the Course Offering for the specified time and day of week.</inlineHelpText>
        <label>Facility</label>
        <referenceTo>hed__Facility__c</referenceTo>
        <relationshipLabel>Course Offering Schedules</relationshipLabel>
        <relationshipName>Course_Offering_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Course Offering Schedule includes Friday.</description>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Course Offering Schedule includes Monday.</description>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Course Offering Schedule includes Saturday.</description>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Start_Time__c</fullName>
        <description>The time of day the Course Offering starts.</description>
        <inlineHelpText>The time of day the Course Offering starts.</inlineHelpText>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>hed__Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Course Offering Schedule includes Sunday.</description>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Course Offering Schedule includes Thursday.</description>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Time_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Time Block in which this Course Offering is being held.</description>
        <inlineHelpText>The Time Block in which this Course Offering is being held.</inlineHelpText>
        <label>Time Block</label>
        <referenceTo>hed__Time_Block__c</referenceTo>
        <relationshipLabel>Course Offering Schedules</relationshipLabel>
        <relationshipName>Course_Offering_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Course Offering Schedule includes Tuesday.</description>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Course Offering Schedule includes Wednesday.</description>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <label>Course Offering Schedule</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSH-{000000}</displayFormat>
        <label>Course Offering Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Offering Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>